--- a/application.yml
+++ b/application.yml
@@ -3,7 +3,7 @@ global-mesagge: its works
 spring:
   client:
     service-url:
-      defaultZone: http://localhost:8080
+      defaultZone: http://localhost:8761/eureka
 
 management:
   endpoints:
