--- a/movie-service-dev.yml
+++ b/movie-service-dev.yml
@@ -1,12 +1,32 @@
 server:
-  port: ${PORT:8083}
+  port: 8083
 
 spring:
   application:
     name: movie-service
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: sa
+  jpa:
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
  
 info:
   app:
     name: movie-service
     description: Movie Service
     version: 1.0.0
+
+message: hello from movie-service
