--- a/application.yml
+++ b/application.yml
@@ -9,7 +9,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: '*'
   info:
     env:
       enabled: true
