--- a/catalog-service-dev.yml
+++ b/catalog-service-dev.yml
@@ -1,9 +1,28 @@
 server:
-  port: ${PORT:8084}
+  port: 8084
 
 spring:
   application:
     name: catalog-service
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: sa
+  jpa:
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+message: hello from catalog-service
  
 info:
   app:
