--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,8 @@ spring:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  config:
+    import: configserver:http://localhost:8082
 
 management:
   endpoints:
