--- a/application.yml
+++ b/application.yml
@@ -4,6 +4,11 @@ spring:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: config-service
 
 management:
   endpoints:
