--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -3,6 +3,8 @@ server:
 spring:
   cloud:
     gateway:
+      default-filters:
+        - name: InfoFilter
       routes:
         - id: movieRoute 
           uri: lb://movie-service 
